# Early-Alert-agent

./: .env.example  .gitignore  Dockerfile  pyproject.toml
.devcontainer/: devcontainer.json
src/: early_warning_system.py  main.py
